//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "private/v1/cluster_type.proto";
import "google/protobuf/field_mask.proto";

message ClustersListRequest {
  optional int32 offset = 1;
  optional int32 limit = 2;
  optional string filter = 3;
}

message ClustersListResponse {
  optional int32 size = 1;
  optional int32 total = 2;
  repeated Cluster items = 3;
}

message ClustersGetRequest {
  string id = 1;
}

message ClustersGetResponse {
  Cluster object = 1;
}

message ClustersCreateRequest {
  Cluster object = 1;
}

message ClustersCreateResponse {
  Cluster object = 1;
}

message ClustersDeleteRequest {
  string id = 1;
}

message ClustersDeleteResponse {}

message ClustersUpdateRequest {
  Cluster object = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message ClustersUpdateResponse {
  Cluster object = 1;
}

service Clusters {
  rpc List(ClustersListRequest) returns (ClustersListResponse) {}
  rpc Get(ClustersGetRequest) returns (ClustersGetResponse) {}
  rpc Create(ClustersCreateRequest) returns (ClustersCreateResponse) {}
  rpc Delete(ClustersDeleteRequest) returns (ClustersDeleteResponse) {}
  rpc Update(ClustersUpdateRequest) returns (ClustersUpdateResponse) {}
}
